cluster/ingress-nginx/kustomization/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-server
  labels:
    name: ws-server
  annotations:
        cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: ws.do.freetale.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ws-server
            port: 
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - ws.do.freetale.me
    secretName: ws-do-freetale-me # < cert-manager will store the created certificate in this secret.
